<resources>
    <string name="app_name">FilmsHelper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="Search">Search</string>
    <string name="Cinemas">Cinemas</string>
    <string name="Profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="film_name">FilmName</string>
    <string name="rating">Rating</string>
    <string name="now_showing">Now Showing</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="popular">Popular</string>
    <string name="see_more">See more</string>
    <string name="rating_imdb">%1$s/10 IMDb</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="length">Length</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="edit_profile">Edit profile</string>
    <string name="arrow">Arrow</string>
    <string name="help_center">Help Center</string>
    <string name="logout">Logout</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="example_name">Example Name</string>
    <string name="example_email">Example Email</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="update">Update</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="favourites">Favourites</string>
    <string name="popular_tv_shows">Popular Tv Shows</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="cast">Cast</string>
    <string name="director">Director</string>
    <string name="similar">Similar</string>
    <string name="updating_time">Updating Time:</string>
    <string name="_18_by_default">18:00 (By Default)</string>
    <string name="updating_time_with_values">%1$d:%2$d</string>
    <string name="filter_results">Filter Results</string>
    <string name="sort_amp_filter"><![CDATA[Sort & Filter]]></string>
    <string name="categories">Categories</string>
    <string name="feature_film">Feature Film</string>
    <string name="tv_movie">Tv Movie</string>
    <string name="tv_series">Tv Series</string>
    <string name="genre">Genre</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="romance">Romance</string>
    <string name="sport">Sport</string>
    <string name="thriller">Thriller</string>
    <string name="western">Western</string>
    <string name="sort">Sort</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="show_movie_theatres">Show movie theatres</string>
    <string name="title_activity_splash_screen">FilmsHelper</string>
    <string name="play_trailer">Play Trailer</string>

</resources>