...

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".presentation.screens.profileFragments.ProfileSignUpFragment">

        <TextView
...
            android:textColor="@color/light_grey_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

        <TextView
            android:id="@+id/textViewToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/sign_up_to_sign_in"
...
